# DeepOta

./: .gitignore  LICENSE  README.md  deep_ota_front.py  setup.cfg
src/deep_ota/: config-sample.py  deep_ota.py
