[metadata]
name = deep-ota-guy-turcotte
version = 0.0.1
author = Guy Turcotte
author_email = turgu666@gmail.com
description = Tool to automate ESPHome DeepSleep Enabled Devices Update through OTA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/turgu1/DeepOta
project_urls =
    Bug Tracker = https://github.com/turgu1/DeepOta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

